Naughty-list pixma network backend option polling

The Pixma network backend behaves badly. polling a value will result in
1 second sleeps for every poll. The problem has been reported, but no
easy/quick fix was available and the bug has been there for multiple
years. Since this destroys the usability of the backend totally, we
simply put the backend on the naughty list and disable the option
polling.

BUG: 429260